# benchpress

./: .env.example  .gitignore  CLAUDE.md  README.md  e2e_test.py  explore_gpqa.py  explore_hf_dataset.py  pyproject.toml  test_extraction.py  test_extraction_debug.py  test_gpqa_access.py  test_gpqa_hf.py  test_gpqa_hf_dataset.py  test_math500_hf.py  test_math_extraction.py  test_normalize.py  test_normalizers.py
results/: aime24_gpt-3.5-turbo_results.json  gpqa_gpt-3.5-turbo_results.json  math500_gpt-3.5-turbo_results.json  math500_hf_meta-llama_Meta-Llama-3.1-8B-Instruct_results.json
src/benchpress/: __init__.py  cli.py  exceptions.py
src/benchpress/datasets/: __init__.py  aime24_hf_dataset.py  base.py  csv_dataset.py  gpqa_dataset.py  gpqa_hf_dataset.py  huggingface_dataset.py  json_dataset.py  math500_hf_dataset.py
src/benchpress/evaluation/: __init__.py  engine.py
src/benchpress/examples/: __init__.py  aime24.py  base.py  gpqa.py  math500.py
src/benchpress/extraction/: __init__.py  base.py  core.py  example.py  general.py  math.py  math_expr_comparison.py  patterns.py  processors.py  registry.py
src/benchpress/models/: __init__.py  base.py  glhf.py  openai_compatible.py
src/benchpress/tasks/: __init__.py  aime24.py  aime24_example.py  base.py  gpqa.py  (+4 more)
tests/: __init__.py  test_aime24.py  test_aime24_hf.py  test_datasets.py  test_datasets_v2.py  test_extraction.py  test_gpqa.py  test_hf_datasets.py  test_math500.py  test_math500_hf.py  test_models.py  test_simplified_extraction.py
tests/fixtures/: extraction_examples.py
tests/unit/: __init__.py
(+22 files in other folders)
